<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

    <string name="app_name">ActivityDoctor</string>
    <string name="goal">Goal</string>
    <string name="about">About</string>
    <string name="doctors_recommendation">Doctors recommendation</string>
    <string name="account">Account</string>
    <string name="goal_summary">Current goal: %,d minutes</string>
    <string name="sign_in">Sign in with your Google account to use the Achievements and Leaderboards features</string>
    <string name="signed_in">Signed in as %s</string>
    <string name="set_goal">Set goal</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in_necessary">Sign in necessary</string>
    <string name="please_sign_in_with_your_google_account">Please sign in with your Google+ account to use this feature. \"Google Play Games\" is also needed</string>
    <string name="minutes">minutes</string>
    <string name="text_color">Text color:</string>
    <string name="background_color">Background color:</string>
    <string name="settings">Settings</string>
    <string name="achievements">Achievements</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="faq">FAQ</string>
    <string name="goal_reached_notification">Goal reached! %s minutes and counting</string>
    <string name="notification_text">%s minutes to go</string>
    <string name="total">Total</string>
    <string name="notification_title">The Doctor is counting for you :)</string>
    <string name="your_progress_will_be_shown_here_soon">Your progress will be shown here soon</string>
    <string name="average">Average</string>
    <string name="record">Record</string>
    <string name="total_last_7_days">Total last 7 days</string>
    <string name="average_last_7_days">Average last 7 days</string>
    <string name="total_this_month">Total this month</string>
    <string name="average_this_month">Average this month</string>
    <string name="about_text_links">This app was created by Niklas Strömberg (<a href="https://linkedin.com/in/niklas-strömberg-3861a614a">LinkedIn</a>). \n\nThis app has tried to replicate <a href="https://www.ncbi.nlm.nih.gov/pubmed/21616714">this</a> study to get fairly correct activity-minutes values.\n\n</string>
    <string name="about_app_version">App version: %s</string>
    <string name="since">Since %s</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="close">close</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="ispaused">The Doctor is taking a break x)</string>
    <string name="pause_on_power_title">Pause while charging</string>
    <string name="pause_on_power_summary">Pause the Doctor while device is charging</string>
    <string name="no_sensor">Sensor not found</string>
    <string name="no_sensor_explain">This app requires a dedicated hardware minute sensor - which your device does not have. This app won\'t run on your device.</string>

    <string name="doctors_recommendation_text">All adults from 18 years and above, is recommended to be physically active in total at least 150 minutes per week. The intensity should be at least moderate. At high intensity it is recommended at least 75 minutes per week. Activity at high and moderate intensity can be combined. The activity should be spread over several of the weeks days, and each sessions should be at least 10 minutes. \n\nExamples of physical activity that meet the recommendations is 30 minutes of brisk walking 5 days per week, 20 – 30 minutes running 3 days per week or a combination of these.\n\n(<a href="http://www.yfa.se/rekommendationer-for-fysisk-aktivitet/">Source: Swedish medical society 2011</a>)\n\n</string>

    <string name="vigorousIntensity_summary">Only measure activity with high intensity</string>
    <string name="vigorousIntensity_title">High intensity</string>
    <string name="moderateIntensity_summary">Only measure activity with moderate intensity</string>
    <string name="moderateIntensity_title">Moderate intensity</string>

    <string name="vigorous_intensity">Vigorous intensity</string>
    <string name="optional">Optional</string>
    <string name="recommended_activity_today">Recommended time\nleft today</string>

    <string name="explanations">Explanations</string>
    <string name="explanations_text">A simple explanation: The swedish medical society recommends moderate activity of at least 150 minutes per week. This app automatically counts each minute of physical activity with high intensity as two minutes of moderate intensity. \n\n\"Recommended time left today\" shows how many minutes of activity you should have to fulfill the recommendations of the swedish medical society, the last 7 days.\n\nThe teal part of the piechart represents your activity on \"vigorous intensity\", and the green slice shows your activity on \"moderate intensity\".\n\n</string>
</resources>
