<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_pause"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/pause"/>

    <item
        android:id="@+id/action_recommended_activity"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/doctors_recommendation"/>
    <item
        android:id="@+id/action_explanations"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/explanations"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"/>
    <item
        android:id="@+id/action_achievements"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/achievements"/>
    <item
        android:id="@+id/action_leaderboard"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/leaderboard"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/about"/>

</menu>